Fix classloader related test failures
pr-link: Alluxio/alluxio#11928
change-id: cid-ecb67f99f9617aaa9e9fa00a0bac6246a84e7159